--- a/index.html
+++ b/index.html
@@ -1,16 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Zachary McDonald</title>
-    <link rel="stylesheet" href="./css/main.css">
-</head>
-<body>
-    <h1>
-        this is working.
-        <script src="JS/main.js"></script>
-    </h1>
-</html>
-</body>
+  <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Zachary McDonald</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link rel="stylesheet" href="./css/main.css">
+  </head>
+  <body>
+          <!--Navbar-->
+          <div class="navbar">
+            <h3>
+              Homepage
+            </h3>
+          </div>
+
+          <!--Header-->
+
+          <div class="jumbotron">
+                  <h1 class="display-4">Hello!</h1>
+                  <p class="lead">My Name is Zachary McDonald!</p>
+                  <hr class="my-4">
+                  <p>Thank You for visting my portfolio!</p>
+          </div>
+
+          <!--HomeMain-->
+          <a class="btn" href="about.html">About</a>
+          <a class="btn" href="project.html">Projects</a>
+          <a class="btn" href="contact.html">Contact</a>
+          <!--Footer-->
+  </body>
+</html>       
