--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
         
         <div class="jumbotron">
                 <h1 class="display-4">About Me</h1>
-                <p class="lead">Here you can find personal informatino about me!</p>
+                <p class="lead">Here you can find personal information about me!</p>
                 <hr class="my-4">
         </div>
 
@@ -59,7 +59,7 @@
             <h4>
                 Education
             </h4>
-            <p> I graduated from Hamilton Southeastern Highschool 2017 with my diploma, afttwerwards I applied for eleven-fifty academy. At eleven-fifty
+            <p> I graduated from Hamilton Southeastern Highschool in 2017 with my diploma, afttwerwards I applied for eleven-fifty academy. At eleven-fifty
                 I studied Microsoft.net. I am still in school at eleven-fifty academy continuting to further my knowledge in Devlopment.
             </p>
             <h4>
