--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
                 <br />
                 <tr>
                     <h4>
-                        Email Adress:
+                        Email Address:
                     </h4>
                     <h4>
                         <a href="mailto:zjmcdon98@gmail.com">
@@ -81,7 +81,7 @@
                 <br />
                 <tr>
                     <h4>
-                        Linkedin Adress:
+                        Linkedin Address:
                     </h4>
                     <h4>
                         <a href="https://www.linkedin.com/in/zachary-m-372106b7/">
