--- a/project.html
+++ b/project.html
@@ -75,8 +75,8 @@
                         CyberWarfareMVC
                     </h4>
                     <h4>
-                        <a href="https://github.com/zjmcdon98/CyberWarfare">
-                            https://github.com/zjmcdon98/CyberWarfare
+                        <a href="https://cyberwarfare.azurewebsites.net/">
+                            https://cyberwarfare.azurewebsites.net/
                         </a>
                     </h4>
                 </tr>
